kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: helloworld.info
    http:
      paths:
      - path: /hello1
        backend:
          serviceName: helloworldservice1
          servicePort: 8080
      - path: /hello2
        backend:
          serviceName: helloworldservice2
          servicePort: 8080
